# russian-poetry-classification

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: raw.csv
dataset/: output.csv
mlruns/0/: meta.yaml
mlruns/732567371776236821/: meta.yaml
mlruns/732567371776236821/0ad20a31467f4180a95fa30104192ea0/: meta.yaml
mlruns/732567371776236821/0ad20a31467f4180a95fa30104192ea0/metrics/: f1
mlruns/732567371776236821/0ad20a31467f4180a95fa30104192ea0/params/: lora_dropout  lr
mlruns/732567371776236821/3277b24952da4336a65fdd854e06f819/: meta.yaml
mlruns/732567371776236821/3277b24952da4336a65fdd854e06f819/params/: lora_dropout  target_modules
mlruns/732567371776236821/33f1b5b69a42405288e5fcb0084a87a0/: meta.yaml
mlruns/732567371776236821/3c2289fcabc847a98649c7276306710a/: meta.yaml
mlruns/732567371776236821/4dc3c2a1f8724c46a6e93591ee8b3eae/: meta.yaml
mlruns/732567371776236821/650b4e7ac4cb45998e1314c914bc530e/: meta.yaml
mlruns/732567371776236821/7acd5d67908f4ee89dc515c4ff8c2e80/: meta.yaml
mlruns/732567371776236821/7cf7d614e7014c80bd3d4b1134e067d4/: meta.yaml
mlruns/732567371776236821/8ca71e26c6314f14977d947b22017e2f/: meta.yaml
mlruns/732567371776236821/a29b917675324bea95cd826a62aaffcf/: meta.yaml
mlruns/732567371776236821/b5318f8b89024d2c9d234cb10f3d46d9/: meta.yaml
mlruns/732567371776236821/bfa1812898094d2aa80cdc1ea0232dc9/: meta.yaml
mlruns/732567371776236821/f5765c0287e744daafed976cec695f38/: meta.yaml
models/: README
models/alpha/: README.md  adapter_config.json  adapter_model.safetensors
notebooks/: baseline.ipynb  data_vizualization.ipynb  inference-model.ipynb  model-sft.ipynb  model_training.ipynb
src/: main.py  scrapper.py  utils.py
src/front/: app.py
src/scrapper/: links.txt  scrapper.py
src/services/backend/: Dockerfile  app.py  model.py
src/services/frontend/: Dockerfile  app.py
src/sft_process/: custom_trainer.py  export_to_onnx.py  hpo.py
(+38 files in other folders)
