[project]
name = "classic-books-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.0",
    "bs4>=0.0.2",
    "datasets>=4.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "mlflow>=3.5.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "plotly>=6.3.1",
    "pymorphy2>=0.9.1",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]
